# lexo

./: .envrc  .gitignore  Cargo.toml  README.md
.direnv/: flake-profile-1-link
.github/workflows/: rust.yml
papis/: .envrc
src/: cli.rs  db copy.rs  db.rs  main.rs  scheme.rs  tui.rs
src/cli/: builder.rs  colors.rs  derive.rs
src/db/: models.rs
temp/: test.db
