[package]
name = "lexo"
version = "0.1.0"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
description = "a command line tool to manage scientific papers and books"
edition = "2018"

[dependencies]
clap = "2.33.3"
colored = "2.0.0"
serde = "1.0.118"
serde_json = "1.0.60"
serde_derive = "1.0.118"
getset = "0.1.1"
anyhow = "1.0.37"
tokio = { version= "1.0.1", features = ["full"] }
futures = "0.3.8"
