[package]
name = "lexo"
version = "0.1.0"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
description = "a command line tool to manage scientific papers and books"
edition = "2021"



[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
colored = "2.0.4"
getset = "0.1.2"
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.105"
tokio = { version= "1.0.1", features = ["full"] }
#rusqlite = "0.29.0"
diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.15" # Optional, for managing environment variables

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
